--- a/pancake-swap-interface-v1/.env.development
+++ b/pancake-swap-interface-v1/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_NETWORK_URL="https://data-seed-prebsc-1-s1.binance.org:8545"
-REACT_APP_CHAIN_ID="97"
+REACT_APP_NETWORK_URL="https://api.baobab.klaytn.net:8651/"
+REACT_APP_CHAIN_ID="1001"
 REACT_APP_GTAG = "GTM-PXLD3XW"
