--- a/pancake-swap-interface-v1/.env.production
+++ b/pancake-swap-interface-v1/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_NETWORK_URL="https://bsc-dataseed1.defibit.io"
-REACT_APP_CHAIN_ID="56"
+REACT_APP_NETWORK_URL="https://api.baobab.klaytn.net:8651/"
+REACT_APP_CHAIN_ID="1001"
 REACT_APP_GTAG = "GTM-TLF66T4"
